--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -3,19 +3,22 @@
 	--beige: #f5f5dc;
 	--black: #000000;
 	--white: #ffffff;
+	--logo-1:#ee7ab4;
+	--logo-2:#0dbbd5;
+	--logo-3:#7cdbb8;
 }
 
 * {
 	margin: 0px;
 	padding: 0px;
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 }
 
 h1{
 	display: flex;
 	justify-content: center;
 	padding: 5rem;
-}
+}	
 
 h2{
 	display: flex;
@@ -23,29 +26,43 @@ h2{
 	padding: 5rem;
 }
 
+	
 body {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 16px;
 	color: var(--black);
 	line-height: 1.6;
-	background: var(--beige);
-	background-image: linear-gradient(180deg, var);
+	background-image: linear-gradient(180deg,var(--white),var(--beige),var(--logo-1),var(--white));	
 	height: 100%;
 }
 
 header {
-
-	background-color: var(--navbar);
-	box-shadow: 0px 3px 7px #777;
+	position:relative;
+	width: 100%;
+	margin: -3% 0;
+	background-color: var(--logo-3);
+	box-shadow: 0px 0px 5px #777;
 }
+a.logo {
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 1.3rem;
+}
+
 img{
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	padding: 5px;
-	width: 100px;
-
+	width: 200px;
 }
 
+.column > img{
+	height: 400px;
+	width: 400px;
+	margin: 10px;
+	border-radius: 200px;
+}
+
+.column > p{
+	margin:5px;
+	text-align: center;
+	font-weight: bold;
+}
 a.logo {
 	text-transform: uppercase;
 	font-weight: 800;
@@ -60,6 +77,14 @@ a.menu {
 	top: 0;
 	padding: 0.5rem 1rem;
 }
+
+.row{
+	display:flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content:space-around;
+}
+
 
 /* By default when we are first loading page, don't display menu */
 nav.navbar {
@@ -80,21 +105,34 @@ ul.navbar-list li a {
 	text-decoration: none;
 	color: var(--black);
 	padding: 0.8rem 1rem;
-	display: block; /* default is inline element, display:block makes <a> to be width: 100% */
+	display: block; 
+	/* default is inline element, display:block makes <a> to be width: 100% */
 }
 
 ul.navbar-list li a:hover {
-	background-color: var(--beige);
+	background-color: var(--white);
+	font: bold;
+}
+
+ul.navbar-list li a:active {
+	background-color: var(--white);
+	font: bold;
 }
 
 .mainpage {
-	border: 5px solid #063c5e;
+	border: 5px solid var(--black);
 	padding: 0 40px 80px;
 	margin: 200px;
-	background-color: #fff;
+	background-color:var(--white);
   }
+.mainpage, .damz_video 
+>p{
+	font-size: 1.5em;
+}
 
 .damz_video{
+	display: flex;
+	flex-direction: column;
 	border: 5px solid #063c5e;
 	padding: 0 40px 80px;
 	margin: 200px;
@@ -102,11 +140,12 @@ ul.navbar-list li a:hover {
   }
 
 video{
-	display: flex;
+	display:flex;
 	border: 1px solid var(--black);
 	position: center;
 	margin: 120px;
 }
+
 
 
 
@@ -129,6 +168,8 @@ video{
 		justify-content: space-around;
 		font-size: 1.25rem;
 		font-weight: bolder;
+		padding-top: 100px;
+				
 	}
 
 	a.logo {
@@ -141,8 +182,8 @@ video{
 }
 /* Form css */
 body {
+	margin:0px;
 	font: normal 18px/1.5 "Fira Sans", "Helvetica Neue", sans-serif;
-	background: var(--beige);
 	color: var(--black);
 	padding: 50px 0;
   }
@@ -167,6 +208,7 @@ body {
   .flex-outer {
 	max-width: 800px;
 	margin: 0 auto;
+	border-color: var(--black);
   }
   
   .flex-outer li,
@@ -188,7 +230,7 @@ body {
   .flex-outer li label,
   .flex-outer li p {
 	padding: 8px;
-	font-weight: 300;
+	/* font-weight: 300; */
 	letter-spacing: .09em;
 	text-transform: uppercase;
   }
@@ -211,54 +253,111 @@ body {
   .flex-outer li input:not([type='checkbox']),
   .flex-outer li textarea {
 	padding: 10px;
-	border: none;
+	border: .5px solid var(--black);
+	border-radius: 10px;
   }
 
   .flex-outer li button {
-
 	padding: 8px 16px;
-	border: none;
-	background: #333;
-	color: #f2f2f2;
+	border: 2px solid;
+	background: var(--beige);
+	color: var(--black);
 	text-transform: uppercase;
 	letter-spacing: .09em;
 	border-radius: 2px;
+
   }
   
   .flex-inner li {
 	width: 100px;
   }
+
 /*Index Page */
+.index-main img{
+	width: 500px;
+	height: 600px;
+	border-radius: 50px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-.bg-image {
-	/* The image used */
-	background-image: url("../images/mom_avodah_2.jpg");
+/* login page */
+.form-fields li {
+	display: flex;
+	flex: 1 100px;
+	text-align: right;
+	text-transform: uppercase;
+	justify-content: center;
+	margin: 10px;
+	width: 75%;
+  }
   
-	/* Add the blur effect */
-	filter: blur(8px);
-	-webkit-filter: blur(8px);
+  .form-fields > li > label,
+  .form-fields > li > label + * {
+	flex: 1 0 100px;
+  }
   
-	/* Full height */
-	height: 100%;
-  
-	/* Center and scale the image nicely */
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+  .form-fields > label {
+	padding: 0.1em 1em 0.1em 0;
   }
 
-  .bg-text {
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-	color: white;
-	font-weight: bold;
-	border: 3px solid #f1f1f1;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 2;
-	width: 80%;
-	padding: 20px;
-	text-align: center;
+  .form-fields li input,
+  .form-fields li textarea {
+	padding: 10px;
+	border: .5px solid var(--black);
+	border-radius: 10px;
   }
+
+
+  .form-fields > li:not(:last-child) {
+	margin-bottom: 20px;
+  }
+
+  .form-fields li button{
+	display: flex;
+	padding: 8px 16px;
+	border: 2px solid;
+	background: var(--beige);
+	color: var(--black);
+	text-transform: uppercase;
+	letter-spacing: .09em;
+	border-radius: 2px;		 
+}
+
+/* Footer CSS */
+.footer{
+	display:flex;
+	margin-top: 100px;
+	padding-top: 50px;
+	padding-left: 100px;
+	padding-right: 100px;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content:space-between;
+	position:relative;
+	width: 100%;
+	border-top: 5px solid var(--black);
+	margin:0px;
+	
+}
+.footer img{
+	width:200px;
+	height:50px;	
+}
+i{
+	margin: 20px; 
+	color: var(--logo-2) 
+  }
+
+ .copyright{
+	 font-weight: 350;
+	 
+	
+ } 
+.slogan{
+	font-family:cursive;
+	font-style: italic;
+} 
+
+/* Activities: Image Effect */
