changed html files to ejs

--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -3,9 +3,9 @@
 	--beige: #f5f5dc;
 	--black: #000000;
 	--white: #ffffff;
-	--logo-1:#ee7ab4;
-	--logo-2:#0dbbd5;
-	--logo-3:#7cdbb8;
+	--logo-1:#ffccee;
+	--logo-2:#99bbff;
+	--logo-3:#a7f2e3;
 }
 
 * {
@@ -30,8 +30,7 @@ h2{
 body {
 	color: var(--black);
 	line-height: 1.6;
-	background-image: linear-gradient(180deg,var(--white),var(--beige),var(--logo-1),var(--white));	
-	height: 100%;
+	background-image: linear-gradient(180deg,var(--logo-2),var(--logo-1),var(--logo-3));height: 100%;
 }
 
 header {
