--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/style/styles.css">
-    <script defer src="public/script/scripts.js"></script>
+    <link rel="stylesheet" href="/style/styles.css">
+    <script defer src="/script/scripts.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="public/images/momsbarn_logo.jpg" alt="logo"></a>
+        <a href="#" class="logo"><img src="/images/momsbarn_logo.jpg" alt="logo"></a>
         <nav class="navbar">
             <ul class="navbar-list">
                 <li><a href="index.html">HOME</a></li>
@@ -47,14 +47,14 @@
         </p>
     <div class="damz-video-whole">
             <video controls>
-                <source src="public/images/mom_life.mp4">
+                <source src="/images/mom_life.mp4">
             </video>
     </div> 
     </div>   
       <!--PAGE FOOTER-->
       <div class="footer"> 
         <div class="cell">
-            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="/images/pagesbyike.png" alt="pages logo"></a>
         </div>
         <div class="cell">
         <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
