--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activities</title>
+    <title>Login</title> 
     <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="public/style/styles.css">
-    <script defer src="public/script/scripts.js"></script>
+    <link rel="stylesheet" href="/style/styles.css">
+    <script defer src="/script/scripts.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="public/images/momsbarn_logo.jpg" alt="logo"></a>
+        <a href="#" class="logo"><img src="/images/momsbarn_logo.jpg" alt="logo"></a>
         <nav class="navbar">
             <ul class="navbar-list">
                 <li><a href="index.html">HOME</a></li>
@@ -28,34 +31,26 @@
             <i class="fas fa-bars fa-2x"></i>
         </a>
     </header>
-    <h1>ACTIVITIES</h1>
-    <div class="row">
-        <div class="column">
-          <img src="public/images/baking.jpg" alt="baking" > 
-          <p> Let's bake together</p>
-        </div>
-        <div class="column">
-          <img src="public/images/crochet.jpg" alt="Crochet">
-          <p>Crochet & Knitting</p>
-        </div>
-        <div class="column">
-          <img src="public/images/fin_planning.jpg" alt="fin-planning">
-          <p> Money my Money </p>
-        </div>
-        <div class="column">
-            <img src="public/images/Fitness.jpg" alt="fitness">
-            <p>Whip me to Shape</p>
-        </div>
-        <div class="column">
-            <img src="public/images/blogging.jpg" alt="blogging">
-            <p> Blogger's club</p>
-        </div>
-    </div>
-    <br>
-      <!--PAGE FOOTER-->
-      <div class="footer"> 
+        <h1>LOGIN</h1>
+        <form>
+            <ul class="form-fields">
+                <li class="form-fields">
+                    <label for="title">Email address:</label>
+                    <input type="text" id="email" name="email" value="Email">
+                </li>
+                <li class="form-fields">
+                    <label for="password">Password:</label>
+                    <input type="text" id="password" name="password" value="Password">
+                </li>
+                <li>
+                    <button type="submit">Submit</button>
+               </li>                    
+            </ul>
+        </form>  
+          <!--PAGE FOOTER-->
+    <div class="footer"> 
         <div class="cell">
-            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="/images/pagesbyike.png" alt="pages logo"></a>
         </div>
         <div class="cell">
         <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
@@ -66,9 +61,6 @@
             <p class="slogan">.....we meet, we share, we connect </p>
         </div>
 
-    </div>
- 
-
-    
+    </div>  
 </body>
 </html>
