--- a/views/pages/Index.ejs
+++ b/views/pages/Index.ejs
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOM'S BARN</title>
     <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="public/style/styles.css"> 
+    <link rel="stylesheet" type="text/css" href="/style/styles.css"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
-    <script defer src="public/script/scripts.js"></script>
+    <script defer src="/script/scripts.js"></script>
 </head>
 <body>
     <header>
         <a href="#" class="logo"> 
-            <img src="public/images/momsbarn_logo.jpg" alt="logo">
+            <img src="/images/momsbarn_logo.jpg" alt="logo">
         </a>
         <nav class="navbar">
             <ul class="navbar-list">
@@ -34,13 +34,13 @@
 
     <h1>Welcome to Mom's Barn</h1>
     <div class="index-main">
-        <img src="public/images/mom_avodah.jpg" alt="mom_avodah" >
+        <img src="/images/mom_avodah.jpg" alt="mom_avodah" >
     </div>
     <br>
     <!--PAGE FOOTER-->
     <div class="footer"> 
         <div class="cell">
-            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="public/images/pagesbyike.png" alt="pages logo"></a>
+            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="/images/pagesbyike.png" alt="pages logo"></a>
         </div>
         <div class="cell">
         <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
