--- a/views/pages/Index.ejs
+++ b/views/pages/Index.ejs
@@ -1,57 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOM'S BARN</title>
-    <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/style/styles.css"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
-    <script defer src="/script/scripts.js"></script>
-</head>
-<body>
-    <header>
-        <a href="#" class="logo"> 
-            <img src="/images/momsbarn_logo.jpg" alt="logo">
-        </a>
-        <nav class="navbar">
-            <ul class="navbar-list">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="activities.html">ACTIVITIES</a></li>
-                <li><a href="register.html">REGISTER</a></li>
-                <li><a href="login.html">LOGIN</a></li>   
-            </ul>
-        </nav>
-        <a href="javascript:void(0);" class="menu">
-            <i class="fas fa-bars fa-2x"></i>
-        </a>        
-    </header>
+<%- include('../partials/head') -%>
+
+<%- include('../partials/nav') -%>
 
 
     <h1>Welcome to Mom's Barn</h1>
     <div class="index-main">
-        <img src="/images/mom_avodah.jpg" alt="mom_avodah" >
+        <img src="/images/mom_avodah_2.jpg" alt="mom_avodah" >
+    </div>
+    <div class="index-main">
+        <img src="/images/mom_son.jpg" alt="mom_avodah" >
+    </div>
+    <div class="index-main">
+        <img src="/images/mom_daughter.jpg" alt="mom_avodah" >
+    </div>
+    <div class="index-main">
+        <img src="/images/mom_child_1.jpg" alt="mom_avodah" >
     </div>
     <br>
-    <!--PAGE FOOTER-->
-    <div class="footer"> 
-        <div class="cell">
-            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="/images/pagesbyike.png" alt="pages logo"></a>
-        </div>
-        <div class="cell">
-        <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
-        </a>
-        </div>
-        <div class="cell">
-            <p class="copyright">&copy; Copyright 2021 | Mother's Barn</p>
-            <p class="slogan">.....we meet, we share, we connect </p>
-        </div>
-
-    </div>
-</body>
-</html>
-
+   
+ <%- include('../partials/footer') -%>
