--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,33 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <script src="https://kit.fontawesome.com/7f93b8e249.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/styles.css">
-    <script defer src="/script/scripts.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;500&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <a href="#" class="logo"><img src="/images/momsbarn_logo.jpg" alt="logo"></a>
-        <nav class="navbar">
-            <ul class="navbar-list">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="activities.html">ACTIVITIES</a></li>
-                <li><a href="register.html">REGISTER</a></li>
-                <li><a href="login.html">LOGIN</a></li>
-                
-            </ul>
-        </nav>
-        <a href="javascript:void(0);" class="menu">
-            <i class="fas fa-bars fa-2x"></i>
-        </a>
-    </header>
+<%- include('../partials/head') -%>
+
+<%- include('../partials/nav') -%>
     <div class="mainpage">
         <h1>ABOUT MOM'S BARN</h1>
         <p>This site was created out of a need to bring mothers of all ages, status, socio-economic background, education and cultural norms together to foster a bond of shared values synonymous with mothers.
@@ -51,20 +24,4 @@
             </video>
     </div> 
     </div>   
-      <!--PAGE FOOTER-->
-      <div class="footer"> 
-        <div class="cell">
-            <a href="http://pagesbyike.com" target="_blank" rel="noreferrer noopener"><img src="/images/pagesbyike.png" alt="pages logo"></a>
-        </div>
-        <div class="cell">
-        <a href="https://www.instagram.com/bolaxire/" target="_blank" rel="noreferrer noopener">bolaxire<i class="fab fa-instagram fa-2x"></i>
-        </a>
-        </div>
-        <div class="cell">
-            <p class="copyright">&copy; Copyright 2021 | Mother's Barn</p>
-            <p class="slogan">.....we meet, we share, we connect </p>
-        </div>
-
-    </div> 
-</body> 
-</html>
+    <%- include('../partials/footer') -%>
